# Cinema-Audience-Forecast

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  deep_tune_results_lgbm.csv  feature_schema.json  info.txt  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  submission.csv
app/: config.py  main.py
app/api/: deps.py  errors.py  routes.py
app/features/: builder.py  calendar.py  lag.py  rolling.py  schema.py  state.py
app/inference/: blender.py  orchestrator.py  pipeline.py
app/middleware/: tracing.py
app/models/: registry.py  schemas.py
app/monitoring/: drift.py  logging.py  metrics.py
app/scheduler/: tasks.py
app/storage/: cache.py  history.py
deployment/: .dockerignore  Dockerfile  docker-compose.yml
deployment/grafana/dashboards/: forecast_inference.json
deployment/prometheus/: alerts.yml  prometheus.yml
models/: registry.json
tests/: conftest.py
tests/test_api/: test_errors.py  test_health.py  test_routes.py
tests/test_features/: test_builder.py  test_calendar.py  test_lag.py  test_rolling.py  test_schema.py  test_state.py
tests/test_inference/: test_blender.py  test_orchestrator.py  test_pipeline.py
tests/test_storage/: test_history.py
