[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cinema-forecast-api"
version = "1.0.0"
description = "Production-grade ML inference serving for cinema audience forecasting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
    "loguru>=0.7.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.0",
    "scipy>=1.13.0",
    "pyarrow>=16.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]
ignore = ["B008", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[project.urls]
Repository = "https://github.com/anomalyco/Cinema-Audience-Forecast"
